--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
@@ -58,12 +58,12 @@
     "@babel/preset-flow": "^7.27.1",
     "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.4",
-    "react-test-renderer": "^19.1.0",
+    "jest-expo": "~54.0.14",
+    "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   }
 }
