--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@types/papaparse": "^5.5.2",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.7",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -45,6 +48,7 @@
     "expo-updates": "~29.0.13",
     "expo-web-browser": "~15.0.7",
     "jest-expo": "~54.0.16",
+    "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
