--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/native": "^7.1.8",
     "@types/papaparse": "^5.5.2",
     "expo": "~54.0.29",
+    "expo-clipboard": "^8.0.8",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.7",
     "expo-document-picker": "~14.0.8",
